[tool.poetry]
name = "asff"
version = "0.1.0"
description = "asff is a Python library to work with Amazon Security Finding Format"
authors = ["Adam Števko <adam.stevko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
networkx = "^2.5"
dlint = "^0.11.0"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
placebo = "^0.9.0"
pylint = "^2.6.0"
pytest-black = "^0.3.12"
pytest-cov = "^2.10.1"
pytest-datadir = "^1.3.1"
pytest-flake8 = "^1.0.7"
pytest-mock = "^3.4.0"
pytest-pylint = "^0.18.0"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
