[tool.poetry]
name = "asff"
version = "0.1.1"
description = "asff is a Python library to work with Amazon Security Finding Format"
license = "BSD-3-Clause"
authors = ["Adam Števko <adam.stevko@gmail.com>"]
maintainers = ["Adam Števko <adam.stevko@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/xen0l/python-asff"
repository = "https://github.com/xen0l/python-asff"
documentation = "https://python-asff.readthedocs.io/"
keywords = [ "security", "aws", "asff", "secuityhub" ]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Security",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/xen0l/python-asff/issues"

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
networkx = "^2.5"
dlint = "^0.11.0"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
placebo = "^0.9.0"
pylint = "^2.6.0"
pytest-black = "^0.3.12"
pytest-cov = "^2.10.1"
pytest-datadir = "^1.3.1"
pytest-flake8 = "^1.0.7"
pytest-mock = "^3.5.0"
pytest-pylint = "^0.18.0"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
